Döpt om isEmail till IsEmail

--- a/KnatteliganWPF/AddTeam.xaml
+++ b/KnatteliganWPF/AddTeam.xaml
@@ -42,7 +42,7 @@
                 <Binding Path="TeamName1" UpdateSourceTrigger="PropertyChanged"
                          Converter="{StaticResource TeamNameToStringConverter}">
                     <Binding.ValidationRules>
-                        <validationRules:TeamNameValidationRule/>
+                        <local:TeamNameValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
