--- a/KnatteliganWPF/CreateLeague.xaml
+++ b/KnatteliganWPF/CreateLeague.xaml
@@ -66,7 +66,7 @@
         </ListBox>
 
         <Button Grid.Row="8"  Grid.Column="0" Margin="5">Edit</Button>
-        <Button Grid.Row="8" Grid.Column="2" Margin="5"  >-</Button>
+        <Button Grid.Row="8" Grid.Column="2" Margin="5" Click="RemoveTeam_Click"  >-</Button>
         <Button Grid.Row="8" Grid.Column="3"  Margin="5" Click="AddTeam_Clicked">+</Button>
 
         <Button Grid.Row="12" Grid.Column="5" Margin="5" Click="CloseCommandHandler_Click" >Cancel</Button>
