--- a/UserHomePage/MainWindow.xaml
+++ b/UserHomePage/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="KnatteliganWPF.MainWindow"
+﻿<Window x:Class="UserHomePage.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:KnatteliganWPF"
+        xmlns:local="clr-namespace:UserHomePage"
         mc:Ignorable="d"
         Title="MainWindow" Height="400" Width="400">
     <Grid>
