--- a/KnatteliganWPF/AddTeam.xaml
+++ b/KnatteliganWPF/AddTeam.xaml
@@ -53,9 +53,19 @@
         <ListBox Grid.ColumnSpan="4" Grid.RowSpan="4" Grid.Row="4" Grid.Column="0">Här i ska våra lag vara</ListBox>
 
         <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="2">Coach name</TextBlock>
-        <TextBox Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="3"></TextBox>
+        <TextBox Name="CoachName" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="3"
+                 ToolTip="{Binding ElementName=CoachName, Path=(Validation.Errors)[0].ErrorContent}">
+            <TextBox.Text>
+                <Binding Path="PersonName" UpdateSourceTrigger="PropertyChanged"
+                         Converter="{StaticResource TeamNameToStringConverter}">
+                    <Binding.ValidationRules>
+                        <local:TeamNameValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
 
-        <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="4">Personal number</TextBlock>
+            <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="4">Personal number</TextBlock>
         <TextBox Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="5"></TextBox>
 
         <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="6">PhoneNo</TextBlock>
