--- a/KnatteliganWPF/CreateLeague.xaml
+++ b/KnatteliganWPF/CreateLeague.xaml
@@ -38,10 +38,10 @@
 
         <Button Grid.Row="8"  Grid.Column="0" Grid.RowSpan="1"  Margin="5">Edit</Button>
         <Button Grid.Row="8" Grid.Column="2" Margin="5"  >-</Button>
-        <Button Grid.Row="8" Grid.Column="3"  Margin="5">+</Button>
+        <Button Grid.Row="8" Grid.Column="3"  Margin="5" Click="AddTeam_Clicked">+</Button>
 
         <Button Grid.Row="12" Grid.Column="5" Margin="5" Click="CloseCommandHandler_Clicked" >Cancel</Button>
-        <Button Grid.Row="12" Grid.Column="7"  Margin="5" Click="AddTeam_Clicked">Next</Button>
+        <Button Grid.Row="12" Grid.Column="7"  Margin="5">Next</Button>
 
 
 
