--- a/KnatteliganWPF/AddTeam.xaml
+++ b/KnatteliganWPF/AddTeam.xaml
@@ -12,6 +12,7 @@
         <converters:EmailToStringConverter x:Key="EmailToStringConverter"/>
         <converters:TeamNameToStringConverter x:Key="TeamNameToStringConverter"/>
         <converters:PersonNameToStringConverter x:Key="PersonNameToStringConverter"/>
+        <converters:PersonalNumberToStringConverter x:Key="PersonalNumberToStringConverter"/>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -62,16 +63,26 @@
                 <Binding Path="PersonName" UpdateSourceTrigger="PropertyChanged"
                          Converter="{StaticResource PersonNameToStringConverter}">
                     <Binding.ValidationRules>
-                        <validationRules:TeamNameValidationRule/>
+                        <validationRules:PersonNameValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
 
             <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="4">Personal number</TextBlock>
-        <TextBox Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="5"></TextBox>
+        <TextBox Name="PersonalNumberTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="5"
+                 ToolTip="{Binding ElementName=PersonalNumberTextBox, Path=(Validation.Errors)[0].ErrorContent}">
+            <TextBox.Text>
+                <Binding Path="PersonalNumber" UpdateSourceTrigger="PropertyChanged"
+                         Converter="{StaticResource PersonalNumberToStringConverter}">
+                    <Binding.ValidationRules>
+                        <validationRules:PersonNameValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
 
-        <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="6">PhoneNo</TextBlock>
+            <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="6">PhoneNo</TextBlock>
         <TextBox Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="7"></TextBox>
 
         <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="8">Email</TextBlock>
