--- a/KnatteliganWPF/AddPlayer.xaml
+++ b/KnatteliganWPF/AddPlayer.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:local="clr-namespace:KnatteliganWPF"
         mc:Ignorable="d"
         Title="AddPlayer" Height="350" Width="400">
@@ -35,19 +36,19 @@
         <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="10 5 0 0">Name:</TextBlock>
         <TextBox Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="10 0 0 0"></TextBox>
         <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Margin="10 5 0 0">Social security number:</TextBlock>
-        <TextBox Name="socialSecurityNumber" VerticalContentAlignment="Center" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="10 0 0 0" TextChanged="searchTextBox_TextChanged"/>
-        <TextBlock IsHitTestVisible="False" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Text="YYMMDD-NNNN" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15 5 5 5" Foreground="DarkGray">
-            <TextBlock.Style>
-                <Style TargetType="{x:Type TextBlock}">
-                    <Setter Property="Visibility" Value="Collapsed"/>
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding Text, ElementName=socialSecurityNumber}" Value="">
-                            <Setter Property="Visibility" Value="Visible"/>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBlock.Style>
-        </TextBlock>
+        <TextBox Name="socialSecurityNumber" VerticalContentAlignment="Center" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="10 0 0 0" TextChanged="searchTextBox_TextChanged" 
+                 ToolTip="{Binding ElementName=socialSecurityNumber, Path=(Validation.Errors)[0].ErrorContent}">
+            <TextBox.Text>
+                <Binding Path="PlayerPersonNr" UpdateSourceTrigger="PropertyChanged" >
+                    <Binding.ValidationRules>
+                        <validationRules:SocialNumberValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+
+
+
         <!--<TextBox Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4" Margin="10 0 0 0"></TextBox>-->
 
 
