--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KnatteliganWPF.AddTeam"
+﻿<Window x:Class="KnatteliganWPF.AddTeamWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
         mc:Ignorable="d"
-        Title="AddTeam" Height="400" Width="400">
+        Title="AddTeamWindow" Height="400" Width="400">
     <Window.Resources>
         <converters:EmailToStringConverter x:Key="EmailToStringConverter"/>
         <converters:TeamNameToStringConverter x:Key="TeamNameToStringConverter"/>
