--- a/KnatteliganWPF/CreateLeague.xaml
+++ b/KnatteliganWPF/CreateLeague.xaml
@@ -28,17 +28,17 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="54*"/>
+            <ColumnDefinition Width="53*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1">Enter the League name:</TextBlock>
-        
-        
+
+
         <TextBox Name ="leagueName" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
                  ToolTip="{Binding ElementName=leagueName, Path=(Validation.Errors)[0].ErrorContent}">
             <TextBox.Text>
@@ -51,20 +51,20 @@
             </TextBox.Text>
         </TextBox>
 
-        
-        
+
+
         <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Margin="0, 5">Add Teams (At least 16 and only even amount)</TextBlock>
-        
+
         <ListBox Name="TeamList" Grid.ColumnSpan="4" Grid.RowSpan="5" Grid.Row="4" Grid.Column="0">
-            
+
         </ListBox>
 
-        <Button Grid.Row="9"  Grid.Column="0" >Edit</Button>
-        <Button Grid.Row="9" Grid.Column="2" Click="RemoveTeam_Click">-</Button>
-        <Button Grid.Row="9" Grid.Column="3" Click="AddTeam_Clicked">+</Button>
+        <Button Grid.Row="9"  Grid.Column="0" Margin="0,0,10,10" >Edit</Button>
+        <Button Grid.Row="9" Grid.Column="3" Click="RemoveTeam_Click" Margin="5,0,23,10">-</Button>
+        <Button Grid.Row="9" Grid.Column="3" Click="AddTeam_Clicked" Margin="30,0,0,10" RenderTransformOrigin="1.179,1.5">+</Button>
 
         <Button Grid.Row="12" Grid.Column="5" Margin="5" Click="CloseCommandHandler_Click" >Cancel</Button>
-        <Button Grid.Row="12" Grid.Column="6"  Margin="5" IsEnabled="True" Click="AddLeague_Click" >Next</Button>
+        <Button Name="AddLeagueButton" Grid.Row="12" Grid.Column="6"  Margin="5" IsEnabled="False" Click="AddLeague_Click" >Next</Button>
 
     </Grid>
 </Window>
