--- a/KnatteliganWPF/CreateLeagueWindow.xaml
+++ b/KnatteliganWPF/CreateLeagueWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KnatteliganWPF.CreateLeague"
+﻿<Window x:Class="KnatteliganWPF.CreateLeagueWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
         mc:Ignorable="d"
-        Title="CreateLeague" Height="400" Width="400">
+        Title="CreateLeagueWindow" Height="400" Width="400">
     <Window.Resources>
         <converters:LeagueNameToStringConverter x:Key="LeagueNameToStringConverter"/>
     </Window.Resources>
@@ -36,7 +36,7 @@
             <ColumnDefinition Width="54*"/>
             <ColumnDefinition Width="53*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1">Enter the League name:</TextBlock>
+        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1">Enter league name</TextBlock>
 
 
         <TextBox Name ="leagueName" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
@@ -55,13 +55,13 @@
 
         <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Margin="0, 5">Add Teams (At least 16 and only even amount)</TextBlock>
 
-        <ListBox Name="TeamList" Grid.ColumnSpan="4" Grid.RowSpan="5" Grid.Row="4" Grid.Column="0">
+        <ListBox Name="TeamList" Grid.ColumnSpan="4" Grid.RowSpan="5" Grid.Row="4" Grid.Column="0" SelectionChanged="TeamList_SelectionChanged">
 
         </ListBox>
 
-        <Button Grid.Row="9"  Grid.Column="0" Margin="0,0,10,10" >Edit</Button>
-        <Button Grid.Row="9" Grid.Column="3" Click="RemoveTeam_Click" Margin="5,0,23,10">-</Button>
-        <Button Grid.Row="9" Grid.Column="3" Click="AddTeam_Clicked" Margin="30,0,0,10" RenderTransformOrigin="1.179,1.5">+</Button>
+        <Button Name="EditBtn" Grid.Row="9"  Grid.Column="0" Margin="0,0,10,10" Click="Edit_Click" IsEnabled="False">Edit</Button>
+        <Button Name="RemoveTeamBtn" Grid.Row="9" Grid.Column="3" Click="RemoveTeam_Click" Margin="0,0,23,10" IsEnabled="False">-</Button>
+        <Button Grid.Row="9" Grid.Column="3" Click="AddTeam_Clicked" Margin="0,0,0,10" RenderTransformOrigin="1.179,1.5" HorizontalAlignment="Right" Width="23">+</Button>
 
         <Button Grid.Row="12" Grid.Column="5" Margin="5" Click="CloseCommandHandler_Click" >Cancel</Button>
         <Button Name="AddLeagueButton" Grid.Row="12" Grid.Column="6"  Margin="5" IsEnabled="False" Click="AddLeague_Click" >Next</Button>
