--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -55,7 +55,7 @@
                  
         
         <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3">Players</TextBlock>
-        <ListBox Grid.ColumnSpan="4" Grid.RowSpan="4" Grid.Row="4" Grid.Column="0">Här i ska våra lag vara</ListBox>
+        <ListBox Name="PlayerList" Grid.ColumnSpan="4" Grid.RowSpan="4" Grid.Row="4" Grid.Column="0" SelectionChanged="PlayerList_SelectionChanged"></ListBox>
 
         <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="2">Coach name</TextBlock>
         <TextBox Name="CoachNameTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="3"
@@ -108,12 +108,12 @@
         </TextBox.Text>
         </TextBox>
 
-        <Button Grid.Row="8"  Grid.Column="0" Grid.RowSpan="1"  Margin="5">Edit</Button>
-        <Button Grid.Row="8" Grid.Column="2" Margin="5"  >-</Button>
+        <Button Name="EditTeamBtn" IsEnabled="False" Grid.Row="8"  Grid.Column="0" Grid.RowSpan="1"  Margin="5" Click="EditTeam_Click">Edit</Button>
+        <Button Name="RemoveTeamBtn" IsEnabled="False"  Grid.Row="8" Grid.Column="2" Margin="5" Click="RemoveTeam_Click"  >-</Button>
         <Button Grid.Row="8" Grid.Column="3"  Margin="5" Click=" AddPlayer_Clicked">+</Button>
 
         <Button Grid.Row="12" Grid.Column="3" Margin="5" Grid.ColumnSpan="2" Click="CloseCommandHandler_Clicked">Cancel</Button>
-        <Button Grid.Row="12" Grid.Column="5"  Margin="5" Grid.ColumnSpan="2" Click="AddTeam_Clicked">Add team</Button>
+        <Button Name="AddTeamBtn" IsEnabled="False"  Grid.Row="12" Grid.Column="5"  Margin="5" Grid.ColumnSpan="2" Click="AddTeam_Clicked">Add team</Button>
 
     </Grid>
 </Window>
