--- a/KnatteliganWPF/AddPlayer.xaml
+++ b/KnatteliganWPF/AddPlayer.xaml
@@ -6,8 +6,8 @@
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:local="clr-namespace:KnatteliganWPF"
         mc:Ignorable="d"
-        Title="AddPlayer" Height="350" Width="400">
-    <Grid>
+        Title="AddPlayer" Height="300" Width="250">
+    <Grid Margin="0,0,2,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -18,8 +18,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+
             <!--<RowDefinition Height="*"/>
             <RowDefinition Height="*"/>-->
         </Grid.RowDefinitions>
@@ -27,36 +26,49 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        
+
         <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="10 5 0 0">Name:</TextBlock>
-        <TextBox Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="10 0 0 0"></TextBox>
+        <TextBox Name="personName" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 0 0">
+            <!--TextChanged="searchTextBox_TextChanged"-->
+            <!--ToolTip="{Binding ElementName=socialSecurityNumber, Path=(Validation.Errors)[0].ErrorContent}">-->
+            <!--<TextBox.Text>
+                <Binding Path="PersonName" UpdateSourceTrigger="PropertyChanged" >
+                    <Binding.ValidationRules>
+                        <validationRules:SocialNumberValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>-->
+        </TextBox>
         <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Margin="10 5 0 0">Social security number:</TextBlock>
-        <TextBox Name="socialSecurityNumber" VerticalContentAlignment="Center" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="10 0 0 0" TextChanged="searchTextBox_TextChanged" 
+        <TextBox Name="socialSecurityNumber" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 0 0" TextChanged="searchTextBox_TextChanged" 
                  ToolTip="{Binding ElementName=socialSecurityNumber, Path=(Validation.Errors)[0].ErrorContent}">
             <TextBox.Text>
-                <Binding Path="PlayerPersonNr" UpdateSourceTrigger="PropertyChanged" >
+                <Binding Path="SocialSecurityNumber" UpdateSourceTrigger="PropertyChanged" >
                     <Binding.ValidationRules>
                         <validationRules:SocialNumberValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
+        <TextBlock IsHitTestVisible="False" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Text="YYMMDD-NNNN" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15 0 0 0" Foreground="DarkGray">
+            <TextBlock.Style>
+                <Style TargetType="{x:Type TextBlock}">
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Text, ElementName=socialSecurityNumber}" Value="">
+                            <Setter Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
 
 
-
-        <!--<TextBox Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4" Margin="10 0 0 0"></TextBox>-->
-
-
-
-
-        <Button Grid.Row="12" Grid.Column="5" Margin="5" Click="CloseCommandHandler_Clicked">Cancel</Button>
-        <Button Grid.Row="12" Grid.Column="6"  Margin="5">Add</Button>
-
+        <Button Grid.Row="6" Grid.Column="1" Margin="5" Click="CloseCommandHandler_Clicked">Cancel</Button>
+        <Button Grid.Row="6" Grid.Column="2"  Margin="5">Add</Button>
 
     </Grid>
 </Window>
