--- a/KnatteliganWPF/AddPlayer.xaml
+++ b/KnatteliganWPF/AddPlayer.xaml
@@ -6,7 +6,7 @@
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:local="clr-namespace:KnatteliganWPF"
         mc:Ignorable="d"
-        Title="AddPlayer" Height="300" Width="250">
+        Title="AddPlayer" ResizeMode="NoResize" Height="270" Width="250">
     <Grid Margin="0,0,2,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -17,21 +17,16 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
 
-            <!--<RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>-->
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
         <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="10 5 0 0">Name:</TextBlock>
-        <TextBox Name="personName" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 0 0">
+        <TextBox Name="personName" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 10 0">
             <!--TextChanged="searchTextBox_TextChanged"-->
             <!--ToolTip="{Binding ElementName=socialSecurityNumber, Path=(Validation.Errors)[0].ErrorContent}">-->
             <!--<TextBox.Text>
@@ -43,7 +38,7 @@
             </TextBox.Text>-->
         </TextBox>
         <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Margin="10 5 0 0">Social security number:</TextBlock>
-        <TextBox Name="socialSecurityNumber" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 0 0" TextChanged="searchTextBox_TextChanged" 
+        <TextBox Name="socialSecurityNumber" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 10 0" TextChanged="searchTextBox_TextChanged" 
                  ToolTip="{Binding ElementName=socialSecurityNumber, Path=(Validation.Errors)[0].ErrorContent}">
             <TextBox.Text>
                 <Binding Path="SocialSecurityNumber" UpdateSourceTrigger="PropertyChanged" >
@@ -67,8 +62,8 @@
         </TextBlock>
 
 
-        <Button Grid.Row="6" Grid.Column="1" Margin="5" Click="CloseCommandHandler_Clicked">Cancel</Button>
-        <Button Grid.Row="6" Grid.Column="2"  Margin="5">Add</Button>
+        <Button Grid.Row="6" Grid.Column="1" Margin="5,0,10,0" Click="CloseCommandHandler_Clicked">Cancel</Button>
+        <Button Grid.Row="6" Grid.Column="2"  Margin="5 0 10 0">Add</Button>
 
     </Grid>
 </Window>
