--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -12,7 +12,6 @@
         <converters:EmailToStringConverter x:Key="EmailToStringConverter"/>
         <converters:TeamNameToStringConverter x:Key="TeamNameToStringConverter"/>
         <converters:PersonNameToStringConverter x:Key="PersonNameToStringConverter"/>
-        
         <converters:PhoneNumberToStringConverter x:Key="PhoneNumberToStringConverter"/>
     </Window.Resources>
     <Grid>
@@ -73,9 +72,9 @@
         <TextBox Name="PersonalNumberTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="5"
                  ToolTip="{Binding ElementName=PersonalNumberTextBox, Path=(Validation.Errors)[0].ErrorContent}">
             <TextBox.Text>
-                <Binding Path="PersonalNumber" UpdateSourceTrigger="PropertyChanged">
+                <Binding Path="PersonalNumber" UpdateSourceTrigger="PropertyChanged" >
                     <Binding.ValidationRules>
-                        
+                        <validationRules:SocialNumberValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
