--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
         mc:Ignorable="d"
+        Activated="AddTeamWindowActivated"
         Title="AddTeamWindow" Height="400" Width="400">
     <Window.Resources>
         <converters:EmailToStringConverter x:Key="EmailToStringConverter"/>
