--- a/KnatteliganWPF/AddPlayer.xaml
+++ b/KnatteliganWPF/AddPlayer.xaml
@@ -6,9 +6,11 @@
         xmlns:validationRules="clr-namespace:KnatteliganWPF.ValidationRules"
         xmlns:local="clr-namespace:KnatteliganWPF"
         mc:Ignorable="d"
-        Title="AddPlayer" ResizeMode="NoResize" Height="270" Width="250">
+        Title="AddPlayer" ResizeMode="NoResize" Height="325" Width="250">
     <Grid Margin="0,0,2,0">
         <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -25,20 +27,28 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="10 5 0 0">Name:</TextBlock>
-        <TextBox Name="personName" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 10 0">
-            <!--TextChanged="searchTextBox_TextChanged"-->
-            <!--ToolTip="{Binding ElementName=socialSecurityNumber, Path=(Validation.Errors)[0].ErrorContent}">-->
-            <!--<TextBox.Text>
-                <Binding Path="PersonName" UpdateSourceTrigger="PropertyChanged" >
+        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="10 5 0 0">First name:</TextBlock>
+        <TextBox Name="firstName" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 10 0">
+            <TextBox.Text>
+                <Binding Path="FirstName" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
-                        <validationRules:SocialNumberValidationRule/>
+                        <validationRules:PlayerNameValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
-            </TextBox.Text>-->
+            </TextBox.Text>
         </TextBox>
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Margin="10 5 0 0">Social security number:</TextBlock>
-        <TextBox Name="socialSecurityNumber" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 10 0" TextChanged="searchTextBox_TextChanged" 
+        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3" Margin="10 5 0 0">Last name:</TextBlock>
+        <TextBox Name="lastName" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 10 0">
+            <TextBox.Text>
+                <Binding Path="LastName" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <validationRules:PlayerNameValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+        <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="5" Margin="10 5 0 0">Social security number:</TextBlock>
+        <TextBox Name="socialSecurityNumber" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Margin="10 0 10 0" TextChanged="searchTextBox_TextChanged" 
                  ToolTip="{Binding ElementName=socialSecurityNumber, Path=(Validation.Errors)[0].ErrorContent}">
             <TextBox.Text>
                 <Binding Path="SocialSecurityNumber" UpdateSourceTrigger="PropertyChanged" >
@@ -48,7 +58,7 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <TextBlock IsHitTestVisible="False" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Text="YYMMDD-NNNN" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15 0 0 0" Foreground="DarkGray">
+        <TextBlock IsHitTestVisible="False" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" Text="YYMMDD-NNNN" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15 0 0 0" Foreground="DarkGray">
             <TextBlock.Style>
                 <Style TargetType="{x:Type TextBlock}">
                     <Setter Property="Visibility" Value="Collapsed"/>
@@ -61,9 +71,8 @@
             </TextBlock.Style>
         </TextBlock>
 
-
-        <Button Grid.Row="6" Grid.Column="1" Margin="5,0,10,0" Click="CloseCommandHandler_Clicked">Cancel</Button>
-        <Button Grid.Row="6" Grid.Column="2"  Margin="5 0 10 0">Add</Button>
+        <Button Grid.Row="8" Grid.Column="1" Margin="5,0,10,0" Click="CloseCommandHandler_Clicked">Cancel</Button>
+        <Button Grid.Row="8" Grid.Column="2"  Margin="5 0 10 0">Add</Button>
 
     </Grid>
 </Window>
