--- a/KnatteliganWPF/MainWindow.xaml
+++ b/KnatteliganWPF/MainWindow.xaml
@@ -24,7 +24,7 @@
 
         <TextBlock Grid.Row ="2" FontWeight="Bold" >Manage existing leagues:</TextBlock>
 
-        <ListBox Name="LeagueList" Grid.Row="4" Grid.Column="0" Margin="5" MinWidth="150" MinHeight="200"/>
-        <Button Grid.Column="1" Margin="225,176,10,10" Grid.Row="4" Click="CreateLeague_Clicked">Create a new league</Button>
+        <ListBox Name="LeagueList" Grid.Row="4" Grid.Column="0" Margin="5" MinWidth="150" MinHeight="200" MouseDoubleClick="ManageLeague_Clicked"/>
+        <Button Grid.Column="1" Margin="225,176,10,10" Grid.Row="4" Click="CreateLeague_Clicked" MaxHeight="20">Create a new league</Button>
     </Grid>
 </Window>
