--- a/KnatteliganWPF/MatchProtocol.xaml
+++ b/KnatteliganWPF/MatchProtocol.xaml
@@ -73,7 +73,7 @@
         <TextBlock Grid.Column="2" Grid.Row="9" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="2" Margin="18,13,16,16" FontWeight="Bold" FontSize="14" Height="27" Width="78" Grid.RowSpan="2" >Red Cards</TextBlock>
 
 
-        <DatePicker Width="110" Grid.ColumnSpan="3" Grid.Column="2" Margin="33,5,26,0" />
+        <DatePicker Width="110" Grid.ColumnSpan="3" Grid.Column="2" Margin="33,5,26,0" SelectedDateChanged="DatePicker_OnSelectedDateChanged"/>
 
 
         <Button Grid.Row="11"  Grid.Column="2" Height="20" Width="50"  Margin="6,0,0,8" Click="Clear_Click" FontSize="10">Clear</Button>
