--- a/KnatteliganWPF/SetTeamSquadWindow.xaml
+++ b/KnatteliganWPF/SetTeamSquadWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KnatteliganWPF"
+        xmlns:entities="clr-namespace:knatteligan.Domain.Entities;assembly=knatteligan"
         mc:Ignorable="d"
         Activated="WindowActivated"
-        Title="MatchProtocol" Height="400" Width="400">
+        Title="MatchProtocol" Height="400" Width="400" d:DataContext="{d:DesignInstance }">
     <Grid Margin="0,0,2,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -29,7 +30,9 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-
+        <ListBox Name="PlayerListCeckBoxes"
+                 Grid.Row="0" Grid.Column="0" Grid.RowSpan="9" Grid.ColumnSpan="5"
+                 ItemsSource="{Binding PlayerList}" />
 
 
     </Grid>
