--- a/KnatteliganWPF/SetTeamSquadWindow.xaml
+++ b/KnatteliganWPF/SetTeamSquadWindow.xaml
@@ -34,6 +34,9 @@
                  Grid.Row="0" Grid.Column="0" Grid.RowSpan="9" Grid.ColumnSpan="5"
                  ItemsSource="{Binding PlayerList}" />
 
+        <Button Grid.Row="8" Grid.Column="0" Content="Add" Click="Add_OnClick"/>
+        <Button Grid.Row="8" Grid.Column="4" Content="Cancel"  Click="Cancel_OnClick"/>
+
 
     </Grid>
 
