--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -14,6 +14,7 @@
         <converters:TeamNameToStringConverter x:Key="TeamNameToStringConverter"/>
         <converters:PersonNameToStringConverter x:Key="PersonNameToStringConverter"/>
         <converters:PhoneNumberToStringConverter x:Key="PhoneNumberToStringConverter"/>
+        <converters:IsEnabledConverter x:Key="IsEnabledConverter"/>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -112,7 +113,17 @@
         <Button Grid.Row="8" Grid.Column="3"  Margin="5" Click="AddPlayer_Clicked">+</Button>
 
         <Button Grid.Row="12" Grid.Column="3" Margin="5" Grid.ColumnSpan="2" Click="CloseCommandHandler_Clicked">Cancel</Button>
-        <Button Name="AddTeamBtn" IsEnabled="False"  Grid.Row="12" Grid.Column="5"  Margin="5" Grid.ColumnSpan="2" Click="AddTeam_Clicked">Add team</Button>
+        <Button Name="AddTeamBtn"  Grid.Row="12" Grid.Column="5"  Margin="5" Content="AddTeam" Grid.ColumnSpan="2" Click="AddTeam_Clicked">
+            <Button.IsEnabled>
+                    <MultiBinding Converter="{StaticResource IsEnabledConverter}">
+                        <Binding ElementName="TeamNameTxt" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="CoachNameTextBox" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="PersonalNumberTextBox" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="PhoneNumberTextBox" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="CoachEmailTextBox" Path="(Validation.Errors)[0]"/>
+                    </MultiBinding>
+                </Button.IsEnabled>
+            </Button>
 
     </Grid>
 </Window>
